--- a/frontend/templates/modals/load_data.html
+++ b/frontend/templates/modals/load_data.html
@@ -74,9 +74,9 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="live-scan-pane" role="tabpanel">
-                        <div class="d-flex justify-content-center align-items-center gap-3 my-3">
-                            <button id="capture-btn" class="btn btn-primary">
-                                <i class="fas fa-camera"></i> Chụp & Phân tích ngay
+                        <div class="d-flex justify-content-center align-items-center gap-4 my-4">
+                            <button id="capture-btn" class="btn-capture-circular" title="Chụp & Phân tích ngay">
+                                <img src="{{ url_for('static', filename='img/camera.svg') }}" alt="Camera Icon">
                             </button>
 
                             <div class="form-check form-switch">
