--- a/frontend/templates/partials/navbar.html
+++ b/frontend/templates/partials/navbar.html
@@ -7,9 +7,9 @@
                     <span class="brand-wonder">Wonder</span><span class="brand-chess">Chess</span>
                 </span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img src="{{ url_for('static', filename='img/nav-bar.svg') }}" alt="Menu" class="navbar-toggler-custom">
             </button>
 
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
