--- a/frontend/templates/openings.html
+++ b/frontend/templates/openings.html
@@ -5,7 +5,7 @@
 {% block body_class %}learn-adventure-background allow-scroll{% endblock %}
 
 {% block body_content %}
-<div id="main-app-screen" class="container-fluid py-3">
+<div id="main-app-screen" class="container-fluid py-3 px-0 px-md-3">
     {% with active_page='openings' %}
         {% include 'partials/navbar.html' %}
     {% endwith %}
