--- a/frontend/templates/openings.html
+++ b/frontend/templates/openings.html
@@ -40,6 +40,11 @@
             <!-- Cards will be injected here by JS -->
         </div>
     </div>
+    <!-- Rabbit Hole Overlay -->
+    <div id="rabbit-hole-overlay" class="rabbit-hole-overlay">
+        <div class="rabbit-hole-tunnel"></div>
+        <!-- Floating pieces will be added by JS -->
+    </div>
 </div>
 {% endblock %}
 
